--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,8 @@
   "content_scripts": [{
     "matches": ["https://scratch.mit.edu/*"],
     "js": ["content.js"]
-  }]
+  }],
+  "permissions": [
+    "storage"
+  ]
 }
