--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,13 @@
   "name": "Private Online",
   "description": "See who's online on the Scratch website without being tracked",
   "background": {
-    "scripts": ["indexer.js", "communication.js"]
+    "scripts": ["constants.js", "indexer.js", "communication.js"]
   },
   "content_scripts": [{
 	"matches": ["https://scratch.mit.edu/*"],
 	"js": ["content.js"]
-  }]
+  }],
+  "permissions": [
+	"storage"
+  ]
 }
